ft(integrating request table) - With backend
- Add request table
- Add status table
- Seed status table
- Create a get all request endpoint
- Modified swagger documentation

[Finishes #167765403]
