# public/api-docs/swaggerDoc.json
@@ -382,6 +382,35 @@
             }
         }
     },
+    "api/v1/user/requests": {
+        "get": {
+            "description": "Get all requests for a particular user",
+            "summary": "User can get their request history",
+            "tags": [
+                "Users",
+                "Requests"
+            ],
+            "produces": [
+                "application/json"
+            ],
+            "security": [
+                {
+                    "Bearer": []
+                }
+            ],
+            "responses": {
+                "200": {
+                    "description": "Success"
+                },
+                "401": {
+                    "description": "Access denied"
+                },
+                "500": {
+                    "description": "Internal Server Error"
+                }
+            }
+        }
+    },
     "securityDefinitions": {
         "api_key": {
             "type": "apiKey",
