# src/services/requestServices.js
@@ -1,0 +1,31 @@
+import models from '../models';
+
+const { Request, Status, User } = models;
+
+/**
+ * User service Class
+ */
+export default class RequestServices {
+  /**
+  * Get user's request history from database
+  * @static
+  * @param {integer} id - The user id
+  * @returns {Promise<object>} A promise object with user requests.
+  * @memberof RequestService
+  */
+  static async getRequests(id) {
+    return Request.findAll({
+      include: [{
+        model: Status,
+        as: 'status',
+        attributes: ['label']
+      },
+      {
+        model: User,
+        as: 'manager',
+        attributes: ['lineManager']
+      }],
+      where: { userId: id }
+    });
+  }
+}
